# agdiff

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.sh
.github/workflows/: build.yml
src/agdiff/: main.py
tests/: test_file.py
